--- a/app/src/main/res/layout/activity_forside.xml
+++ b/app/src/main/res/layout/activity_forside.xml
@@ -24,7 +24,7 @@
         android:id="@+id/listOfTaskButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:onClick="listOfTaskOnClick" />
+        android:onClick="listOfTaskButtonOnClick" />
 
     <TextView
         android:layout_width="wrap_content"
