--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:focusable="true">
 
     <Button
         android:layout_width="wrap_content"
@@ -95,12 +96,26 @@
         android:layout_marginLeft="150dp"
         android:textSize="20dp" />
 
-    <DatePicker
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/dtpDate"
-        android:layout_below="@+id/chbAcquisition"
+        android:id="@+id/EtxfromDate"
+        android:text="Indtast færdiggørelsesdato"
+        android:layout_below="@+id/txtDate"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:focusableInTouchMode="false"
+        android:focusable="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Laves senest"
+        android:id="@+id/txtDate"
+        android:layout_below="@+id/chbAcquisition"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
