--- a/app/src/main/res/layout/activity_single_task.xml
+++ b/app/src/main/res/layout/activity_single_task.xml
@@ -6,7 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.marianne.ejendomsselskabetbmapp.SingleTask">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/passedText"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="177dp" />
 
 </RelativeLayout>
